[package]
name = "iavl-app"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = { version = "0.15.8", features = ["k256"] }
alloy-primitives = { version = "1.1.0", features = ["rlp", "getrandom"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
iavl = { path = "../iavl" }

[dev-dependencies]
alloy-network = "0.15.9"
alloy-signer-local = "0.15.9"
